kubernetes/apps/headlamp/base/middleware-franklinhouse.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token-franklinhouse
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: ENC[AES256_GCM,data:O10566vWqkzMnWbWTz2w+wQ63Ko6Gi5nobtn6XxaFCvTJuqhdymYDZyc8GEvRrOUvSZpbLEV605gUpZ3X/qQIY6Epo8ecmfmQuW9d4ln+gjNDtnW1MyRzfrA3IZxnUT7VxGx6ZdbQHufU1yYSF20dTYBtRdED4/us4cFez4G/I2FfyCerpZbqaonLAXt82JBj2DxyII5/R9EGBjBl4lxNE8hen63RpwDNzD+S0OuM4j1el5XHKxd7lF3wpZkPFFXd1YKpEwH+OOfBHz7wxkF9nXEjaUdisQORNZA2lQ4osdqkcE20NFJbLvaBHvVWxOzFzyw9OG37miEVEHOqF6+U4GYrJWFl2XCkdDCOfG6UQThG5rAwALNL8BJX5AGHI2kaE0pCPvzfi1g98d3kADAX2sbhN4P1UflpPBZ+KmJNZdySNMy3JhwaDymeRq/mR9ZveTBw [...]
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpeW1aS09zaEZtV2pLODRr
[...]
            7AeNs//Nc4on6tI25nRfGihjAXCicq77akQzb6O4bOg+wx992E5JuA==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqWitkZ25Sc1hGUGlBazdx
[...]
            vTFygQtOf4jDjlikmCpB6llSSiaxbOoMCZViCmyTIhwH3iIgT5hw8Q==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1c5k0q4adlrst6t003whpek86c87ymkdh9num9ha22uhwftvanyds6v2ctc
    encrypted_regex: ^(Authorization)$
    lastmodified: "2026-03-23T18:25:01Z"
    mac: ENC[AES256_GCM,data:Bznkim2Oz3DIvEdxAAx6KEo+cxqIas40Ioi1CPCi4XGP5vvXuF1ZPjnWuAZWpWVXvhEWLjP63B6IXJWmkLcf91duj++PWgBZt6izZrPYxgvxb/vteehHWwubCmMj4iVn43gIjhYfo1WJ1F7T5fzTCbWjQlCqv1a9gAKu3zBMRQo=,iv:kNdiIpEfw++SYFvUV/eFYaidPRify5+W/YLcrRyy1Ww=,tag:H+FFitNDe1Av8n3zBzv1aw==,type:str]
    version: 3.11.0
