kubernetes/apps/headlamp/base/middleware.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: ENC[AES256_GCM,data:Xp9BvjaPLrEIsWGYH3RFGVghpiwaRfSN2tYIBcDAUtzlAyHJsSPEIpVYxBY0TFcmJ6CnUtXgZEtWWHdsHlEIr2KqYqRhEy1L+2DYiwrc9irYsuWmd8QRxczsBPszutdB9/TjbYr+1npVhatPHFR7qocXX2QhnVq+BGPSJHEUtEv2ARDYI+DjVg1gPKIIKm2hmEQWBW/p/kLVCZZBk7ZK0GcIkk/0liQJogNhwSbyZHGDGiRHHvZOoWYR+Uy17pVocBtcVVCBEApuJTerkv+ZBrEbdc9omvIr6GqSHUUdrwbFrLUn/wNDhcO3vpnbPCqm5pOwhe+Kwy7f+loqFBIYgjuxjanioU4L0D5hwmBEAtwiqtyHnqyUG9iQEIzLG1nwPXn0u/F7stO2ybLXKlFPMlG1hpquCGoHvrbEefyMzFmOoKFOdRtS75kzZAZ1mTPJe39rn [...]
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtMFg1cEExYXdqdFJvTThh
[...]
            PXckK1unIihygVNqYYv392+wpgsZVtOcGHVfww/IE8CGm3KZxy5wbA==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiVjBoODBVdTBBQVNvb0lE
[...]
            qLbpiQaVbYmsfSapm9CybI47bcwImR1Ws3P1qAjB+BPxfrZEv4isMQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1c5k0q4adlrst6t003whpek86c87ymkdh9num9ha22uhwftvanyds6v2ctc
    encrypted_regex: ^(Authorization)$
    lastmodified: "2026-01-01T22:50:16Z"
    mac: ENC[AES256_GCM,data:iZA6c9hjktuBIGI16maS221zDAwngI4vs0ox36K76bou+zcjJV307QWxB33jKjG5KTb488VbEhKZdx0kebxiug56ZFq886xZ350VJNjbboegLBA2bzTxxsXFTEeLPVsDGtYOCeyQk2CNEv23UeNA4mByLjSKfxHiiJ1R6l1Uy8w=,iv:FqKxhdULe+p5b47lcGcsAkNWtjfaTILZ3DEhi9ZyeYw=,tag:k/epaeZ3FKjTZIEOmtUk6w==,type:str]
    version: 3.11.0
